--- a/tasks/task2/R/backup/FLife-mydas.Rmd
+++ b/tasks/task2/R/backup/FLife-mydas.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "MyDas"
 subtitle: "Life History Relationships"
-author: "Laurie Kell & Alex Tidd"
+author: "Laurie Kell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 ---
