--- a/tasks/task2/R/backup/task2-psa-susceptibilty.Rmd
+++ b/tasks/task2/R/backup/task2-psa-susceptibilty.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Risk Analysis"
 subtitle: "Productivity Analysis" 
-author: "Laurie Kell & Alex Tidd"
+author: "Laurie Kell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: html_document
 ---
