--- a/papers/roc/tex/roc.tex
+++ b/papers/roc/tex/roc.tex
@@ -43,6 +43,16 @@
 \linenumbers
 \linespread{2}
 
+\section{Outline}
+\begin{itemize}
+ \item Robustness, despite what you dont know
+ \item Value-of-information
+ \item Value-of-control
+ \item Trends v. absolute
+ \item Indicator for life histories
+ \item Indicator for fisheries
+\end{itemize}
+
 
 \section{Introduction}
 
@@ -121,18 +131,19 @@ The ROC curve is constructed by sorting the observed outcomes from the OM by the
 \section{Results}
 
 
-\textbf{Figure} \ref{fig:cor} Life history parameters
+\textbf{Figure} \ref{fig:lh} Life history parameters
 
-\textbf{Figure} \ref{fig:oms} shows the simulated exploitation history relative to $MSY$ reference points for each of the stocks for the base case. Fishing was initially low then increased to twice $F_{MSY}$, following which a recovery plan was implemented in order to reduce F to $F_{MSY}$. The coloured regions indicate exploitation levels.
+\textbf{Figure} \ref{fig:om} shows the simulated exploitation history relative to $MSY$ reference points for each of the stocks for the base case. Fishing was initially low then increased to twice $F_{MSY}$, following which a recovery plan was implemented in order to reduce F to $F_{MSY}$. The coloured regions indicate exploitation levels.
 
-\textbf{Figure} \ref{fig:samples} Example simulated length samples 
+\textbf{Figure} \ref{fig:lfd} Example of simulated length samples 
 
-\textbf{Figure} \ref{fig:indicators} indicators 
+\textbf{Figure} \ref{fig:indicators} Example indicators with worm plots
 
-\textbf{Figure} \ref{fig:roc} ROC curves
+\textbf{Figure} \ref{fig:roc} ROC curves for ICES indicators
 
-\textbf{Figure} \ref{fig:discrim} discrimination thresholds for each indicator. 
+\textbf{Figure} \ref{fig:discrim} boxplots comparing ICES indicators/reference points to ROC tresholds
 
+\textbf{Figure} \ref{fig:tree} Regression Tree
 
 
 \section{Discussion}
